--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -387,15 +387,15 @@ header .navbar {
 }
 
 .Modern-Slider .item-1 .img-fill {
-	background-image: url(../images/slide_01.jpg);
+	background-image: url(../images/new/14046155_602401036605756_4421402199086004636_n.jpg);
 }
 
 .Modern-Slider .item-2 .img-fill {
-	background-image: url(../images/slide_02.jpg);
+	background-image: url(../images/new/Photo\ byaimeevia\ Iwaria.jpeg);
 }
 
 .Modern-Slider .item-3 .img-fill {
-	background-image: url(../images/slide_03.jpg);
+	background-image: url(../images/new/b6dbcb95-5b4e-4c01-8afc-1bedcb1d77f5.jpg);
 }
 
 .Modern-Slider .NextArrow{
